--- a/pom.xml
+++ b/pom.xml
@@ -83,15 +83,21 @@
 			<dependency>
 					<groupId>io.jsonwebtoken</groupId>
 					<artifactId>jjwt-impl</artifactId>
-					<version>0.11.5</version>
 					<scope>runtime</scope>
+					<version>0.11.5</version>
 			</dependency>
 			<dependency>
 					<groupId>io.jsonwebtoken</groupId>
 					<artifactId>jjwt-jackson</artifactId>
-					<version>0.11.5</version>
 					<scope>runtime</scope>
+					<version>0.11.5</version>
 			</dependency>
+
+			<!-- Validator -->
+			<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-validation</artifactId>
+			</dependency>			
 
 			<!-- Swagger -->
 			<dependency>
